Fix alignment of hidden comments

--- a/res/style.scss
+++ b/res/style.scss
@@ -291,7 +291,7 @@
 
         &.hidden {
             padding-top: 0;
-            padding-bottom: 10px;
+            padding-bottom: 10px !important;
 
             & .at_author {
                 color: gray !important;
